--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -8,6 +8,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "J'essaye de définir la contrainte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def contrainte(a,x,y,delta):\n",
+    "    dist= ((x-a[0])**2+(y-a[1])**2)**(1/2)\n",
+    "    return (dist-delta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def F(a,x,y,c,delta,f):\n",
+    "    return(np.array[[f(x,y)-c],[contrainte(a,x,y,delta)]])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
