Ajout Jacobienne et test

--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,7 @@
     "\n",
     "def perpendicular( a ) :\n",
     "    b = np.array([-a[1], a[0]])\n",
-    "    c = np.array([a[1], -a[0]])\n",
-    "    return b, c\n",
+    "    return b\n",
     "\n",
     "\n",
     "def simple_contour(f, c=0.0, delta=0.01) :\n",
@@ -68,45 +67,74 @@
     "\n",
     "    X = [0]\n",
     "    Y = [find_seed(g, c)]\n",
-    "    tg_tuple = perpendicular(grad_f(X[0], Y[0]))\n",
-    "    if tg_tuple[0][0] >= 0 :\n",
-    "        X.append(tg_tuple[0][0])\n",
-    "        Y.append(tg_tuple[0][1])\n",
+    "    tg = perpendicular(grad_f(X[0], Y[0]))\n",
+    "    if tg[0] >= 0 :\n",
+    "        X.append(tg[0])\n",
+    "        Y.append(tg[1])\n",
     "    else :\n",
-    "        X.append(tg_tuple[1][0])\n",
-    "        Y.append(tg_tuple[1][1])\n",
+    "        X.append(-tg[0])\n",
+    "        Y.append(-tg[1])\n",
     "\n",
-    "    while False :\n",
+    "    while not fin_ligne(X, Y, delta) :\n",
     "        gradient = grad_f(X[-1], Y[-1])\n",
-    "        tg_tuple = perpendicular(gradient)\n",
+    "        perp = perpendicular(gradient)\n",
+    "        tg = perp / np.linalg.norm(perp) * delta\n",
     "        adernier = [X[-2], Y[-2]]\n",
     "        dernier = [X[-1],Y[-1]]\n",
-    "        if distance2(adernier, tg_tuple[])\n",
+    "        if distance2(adernier, dernier + tg) >= distance2(adernier, dernier - tg) :\n",
+    "            X.append(dernier[0] + tg[0])\n",
+    "            Y.append(dernier[1] + tg[1])\n",
+    "        else :\n",
+    "            X.append(dernier[0] - tg[0])\n",
+    "            Y.append(dernier[1] - tg[1])\n",
     "\n",
+    "def fin_ligne(X, Y, delta) :\n",
+    "    if X[-1] > 1 -  delta or X[-1] < delta or Y[-1] > 1 - delta or Y[-1] < delta :\n",
+    "        return 0\n",
+    "# Attention on a un pb si le gradient devient nul : comment définir la tangente ?\n",
     "\n",
-    "# Attention on a un pb si le gradient devient nul : comment tu définis la tangente ?\n",
-    "\n",
-    "def grad_f(x,y) :\n",
+    "def grad_f(f,x,y) :\n",
     "    g = autograd.grad\n",
     "    return np.r_[g(f, 0)(x, y), g(f, 1)(x, y)]\n",
     "\n",
     "def f(x, y) :\n",
-    "    return np.sin(x) + 2.0 * np.sin(y)"
+    "    return np.sin(x) + 2.0 * np.sin(y)\n",
+    "\n",
+    "def Test_jacob(x, y) :\n",
+    "    return np.array([np.exp(x), np.exp(y)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Jacob(F, x, y) :\n",
+    "    j = autograd.jacobian\n",
+    "    return np.c_[j(F, 0)(x, y), j(F, 1)(x, y)]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [0., 1.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Jacob(Test_jacob, 0.0, 0.0)"
+   ]
   },
   {
    "cell_type": "code",
