--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -72,8 +72,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ici la fonction gradient, recopiée directement du poly"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def grad_f(f,x,y) :\n",
+    "    g = autograd.grad\n",
+    "    return np.r_[g(f, 0)(x, y), g(f, 1)(x, y)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ici deux fonctions pratiques : \n",
+    "\n",
+    "-distance2 pour comparer les distances (au carré dans ce cas)\n",
+    "\n",
+    "-perpendicular pour choisir (arbitrairement) la direction normale à un vecteur"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +111,15 @@
     "\n",
     "def perpendicular( a ) :\n",
     "    b = np.array([-a[1], a[0]])\n",
-    "    return b\n",
-    "\n",
-    "\n",
+    "    return b\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def simple_contour(f, c=0.0, delta=0.01) :\n",
     "\n",
     "    def g(y) :\n",
@@ -121,9 +156,7 @@
     "        return 0\n",
     "# Attention on a un pb si le gradient devient nul : comment définir la tangente ?\n",
     "\n",
-    "def grad_f(f,x,y) :\n",
-    "    g = autograd.grad\n",
-    "    return np.r_[g(f, 0)(x, y), g(f, 1)(x, y)]\n",
+    "\n",
     "\n",
     "def f(x, y) :\n",
     "    return np.sin(x) + 2.0 * np.sin(y)\n",
