--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def contrainte(a,x,y,delta):\n",
-    "    dist= ((x-a[0])**2+(y-a[1])**2)**(1/2)\n",
+    "def contrainte(a,b,delta):\n",
+    "    dist= ((b[0]-a[0])**2+(b[1]-a[1])**2)**(1/2)\n",
     "    return (dist-delta)"
    ]
   },
@@ -110,11 +110,13 @@
     "        adernier = [X[-2], Y[-2]]\n",
     "        dernier = [X[-1],Y[-1]]\n",
     "        if distance2(adernier, dernier + tg) >= distance2(adernier, dernier - tg) :\n",
-    "            X.append(dernier[0] + tg[0])\n",
-    "            Y.append(dernier[1] + tg[1])\n",
+    "            newton0 = dernier + tg\n",
     "        else :\n",
-    "            X.append(dernier[0] - tg[0])\n",
-    "            Y.append(dernier[1] - tg[1])\n",
+    "            newton0 = dernier - tg\n",
+    "\n",
+    "            \n",
+    "            \n",
+    "def Newton(f, newton0, c, delta, )            \n",
     "\n",
     "def fin_ligne(X, Y, delta) :\n",
     "    if X[-1] > 1 -  delta or X[-1] < delta or Y[-1] > 1 - delta or Y[-1] < delta :\n",
