début mise en page

--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -11,18 +11,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "J'essaye de définir la contrainte"
+    "Les fonctions bien pratique : \n",
+    "\n",
+    "- distance2 permet de calculer les distances entre deux points a et b (attention la sortie est au carré)\n",
+    "\n",
+    "- perpendicular rend la normal à un vecteur (un point en fait) (direction arbitraire)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def distance2(a, b) :\n",
+    "    return (a[0] - b[0])**2 + (a[1]-b[1])**2\n",
+    "\n",
+    "def perpendicular( a ) :\n",
+    "    b = np.array([-a[1], a[0]])\n",
+    "    return b\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Je définis la fonction contrainte qui impose la distance delta entre deux points du tracé de notre ligne de niveau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def contrainte(a,b,delta):\n",
-    "    dist= ((b[0]-a[0])**2+(b[1]-a[1])**2)**(1/2)\n",
+    "    dist = distance2(a,b)**(1/2)\n",
     "    return (dist-delta)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La fonction F qui va de R^2 dans R^2, qui lorsqu'elle s'annule :\n",
+    "\n",
+    "- vérifie avec sa première coordonnée que le point est bien sur la ligne de niveau f(x,y)=c\n",
+    "\n",
+    "- s'assure que le nouveau point créé ,b , est à la distance delta du point précédent de la ligne de niveau, a\n",
+    "\n",
+    "Cette fonction permettra par la suite d'utiliser la méthode de newton..."
    ]
   },
   {
@@ -87,31 +125,6 @@
     "def grad_f(f,x,y) :\n",
     "    g = autograd.grad\n",
     "    return np.r_[g(f, 0)(x, y), g(f, 1)(x, y)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Ici deux fonctions pratiques : \n",
-    "\n",
-    "-distance2 pour comparer les distances (au carré dans ce cas)\n",
-    "\n",
-    "-perpendicular pour choisir (arbitrairement) la direction normale à un vecteur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def distance2(a, b) :\n",
-    "    return (a[0] - b[0])**2 + (a[1]-b[1])**2\n",
-    "\n",
-    "def perpendicular( a ) :\n",
-    "    b = np.array([-a[1], a[0]])\n",
-    "    return b\n"
    ]
   },
   {
