--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Salut le projo\n"
+    "$$\n",
+    "\\documentclass[a4paper,11pt]{article}\n",
+    "\\usepackage[french]{babel}\n",
+    "\\usepackage[T1]{fontenc}\n",
+    "\\usepackage[utf8]{inputenc}\n",
+    "\\usepackage{lmodern}\n",
+    "\\usepackage{microtype}\n",
+    "\\usepackage{hyperref}\n",
+    "\\begin{document}\n",
+    "SALUT LE PROJO\n",
+    "\\end{document}\n",
+    "$$"
    ]
   },
   {
