Enlevé les autres fichiers du github

--- a/rendu_projet.ipynb
+++ b/rendu_projet.ipynb
@@ -428,10 +428,17 @@
     "\n",
     "**Hypothèse :** le problème peut venir du find_seed qui ne trouverait pas de solution et divergerait vers une des bornes de son intervalle\n",
     "\n",
-    "Malheureusement, la condition imposée est censée garantir l'existence d'une racine, la fonction utilisée étant de classe C1.\n",
+    "Malheureusement, la condition imposée est censée garantir l'existence d'une racine, la fonction utilisée étant continue.\n",
     "\n",
     "Ayant testé plusieurs syntaxes de find_seed, nous avons pensé que le problème pourrait provenir de la différence entre la condition de sortie de contour_simple **(être suffisamment proche ou au delà de la bordure)** et les tests de sortie de contour **(dernier point exactement sur la bordure)**, mais adapter fin_ligne / contour_simple pour avoir un point exactement sur la bordure n'a pas fonctionné, et assouplir la condition de contour a mené à la disparition d'une partie de la ligne bleue (car passant par un coin, si on élargit la condition la fonction se \"trompe\" de côté de sortie."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
