--- a/rendu_projo.ipynb
+++ b/rendu_projo.ipynb
@@ -5,16 +5,7 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\documentclass[a4paper,11pt]{article}\n",
-    "\\usepackage[french]{babel}\n",
-    "\\usepackage[T1]{fontenc}\n",
-    "\\usepackage[utf8]{inputenc}\n",
-    "\\usepackage{lmodern}\n",
-    "\\usepackage{microtype}\n",
-    "\\usepackage{hyperref}\n",
-    "\\begin{document}\n",
-    "SALUT LE PROJO\n",
-    "\\end{document}\n",
+    "Salut le projet math-info\n",
     "$$"
    ]
   },
